# MotionTracker

./: .gitignore  README.md  StartEscapeRoomMotionTracker.ps1  pyproject.toml
config/: poses.json  rules.json  spells.json
docs/: SETUP.md
src/bridge/KinectBridge/: Contracts.cs  KinectBodyPublisher.cs  KinectBridge.csproj  Program.cs
src/python/motion_tracker/: __init__.py  app.py  main.py
src/python/motion_tracker/detectors/: __init__.py  wand_spell.py  x_pose.py
src/python/motion_tracker/engine/: events.py  rules.py
src/python/motion_tracker/outputs/: __init__.py  audio.py  webhook.py
src/python/motion_tracker/sensor/: __init__.py  bridge_client.py  frame_buffer.py  models.py  replay.py
src/python/motion_tracker/utils/: geometry.py
tests/python/: test_rules.py  test_wand_spell.py  test_x_pose.py
